welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var i:Int=0
	if(nums(i)!=value){
	i:=i+1
	return -1
	}else{
	return i;
		}
	
	


}
